[project]
name = "momaverse-backend"
version = "0.1.0"
description = "Momaverse backend API"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "asyncpg>=0.30.0",
    "pydantic-settings>=2.13.1",
    "sqladmin>=0.23.0",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
    "pydantic[email]>=2.12.5",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.1",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "greenlet>=3.3.2",
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "regex>=2026.2.28",
    "ruff>=0.15.5",
]
pipeline = [
    "crawl4ai>=0.8.0",
    "google-genai>=1.65.0",
    "python-dotenv>=1.2.2",
    "httpx>=0.28.1",
    "Pillow>=12.1.1",
    "regex>=2026.2.28",
    "psycopg2-binary>=2.9.10",
]

[tool.ruff]
target-version = "py313"

[tool.mypy]
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "api.models.*"
# SQLAlchemy models use string forward references resolved at runtime
disable_error_code = ["name-defined"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
